Added ALA Profile option for SDS Information.

--- a/Monitoring/Report-scripts/Report-SDS-testing.ipynb
+++ b/Monitoring/Report-scripts/Report-SDS-testing.ipynb
@@ -53,22 +53,11 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "### Download from URL function definition"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "outputs": [],
    "source": [
+    "# species group count\n",
     "def download_url(url: str):\n",
     "    print(\"download from: \", url)\n",
     "    with urllib.request.urlopen(url, context=ssl.create_default_context(cafile=certifi.where())) as url:\n",
@@ -79,7 +68,9 @@
     "        else:\n",
     "            # Handle the error\n",
     "            print('Error in download_ala_list:', url.status)\n",
-    "    return data"
+    "    return data\n",
+    "urlsct = 'https://api.ala.org.au/occurrences/occurrences/facets?q=species_list_uid%3Adr2627&facets=species&flimit=1000'\n",
+    "q=species_list_uid%3Adr2627&qualityProfile=ALA"
    ],
    "metadata": {
     "collapsed": false,
@@ -90,55 +81,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Need State and List UID\n",
-    "# Generalised count\n",
-    "urlgen = 'https://api.ala.org.au/occurrences/occurrences/search?q=species_list_uid%3Adr2627&fq=sensitive%3Ageneralised&im=false'\n",
-    "data = download_url(urlgen)\n",
-    "genCt = data['totalRecords'][0]\n",
-    "\n",
-    "# Already Generalised\n",
-    "urlagen = 'https://api.ala.org.au/occurrences/occurrences/search?q=species_list_uid%3Adr2627&fq=sensitive%3AalreadyGeneralised&im=false'\n",
-    "data = download_url(urlagen)\n",
-    "aGenCt = data['totalRecords'][0]\n",
-    "\n",
-    "# Not supplied\n",
-    "urlns = 'https://api.ala.org.au/occurrences/occurrences/search?q=species_list_uid%3Adr2627&&fq=-sensitive%3A*'\n",
-    "data = download_url(urlns)\n",
-    "nsCt = data['totalRecords'][0]\n",
-    "\n",
-    "totCt= genCt + aGenCt\n",
-    "\n",
-    "# Returns pecies in the Species list\n",
-    "# urlgen = 'https://api.ala.org.au/specieslist/ws/queryListItemOrKVP?druid=dr2627&fields=fields%3Dspecies'"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "download from:  https://api.ala.org.au/occurrences/explore/groups?q=q%3Dspecies_list_uid%253Adr2627&fq=fq%3Dsensitive\n"
+      "download from:  https://api.ala.org.au/occurrences/occurrences/facets?q=species_list_uid%3Adr487&facets=species\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "  fieldName                                        fieldResult  count\n0   species  [{'label': 'Callocephalon fimbriatum', 'i18nCo...    196",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>fieldName</th>\n      <th>fieldResult</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>species</td>\n      <td>[{'label': 'Callocephalon fimbriatum', 'i18nCo...</td>\n      <td>196</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "# species group count\n",
-    "urlsct = 'https://api.ala.org.au/occurrences/explore/groups?q=q%3Dspecies_list_uid%253Adr2627&fq=fq%3Dsensitive%253AalreadyGeneralised%26im%3Dfalse'\n",
     "sdata = download_url(urlsct)\n",
-    "spCt = sdata['speciesCount'][0]"
+    "sdata"
    ],
    "metadata": {
     "collapsed": false,
@@ -149,14 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "spCt = sdata['count'][0]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "outputs": [
     {
      "data": {
-      "text/plain": "              name  count  speciesCount  level\n0      ALL_SPECIES   8789            81      0\n1          Animals     68            55      1\n2          Mammals      6             5      2\n3            Birds     48            37      2\n4         Reptiles      6             6      2\n5       Amphibians      0             0      2\n6           Fishes      4             3      2\n7         Molluscs      0             0      2\n8       Arthropods      0             0      2\n9      Crustaceans      0             0      3\n10         Insects      0             0      3\n11          Plants   8721            26      1\n12      Bryophytes      0             0      2\n13     Gymnosperms      3             1      2\n14  FernsAndAllies      0             0      2\n15     Angiosperms   8718            25      2\n16        Monocots      3             3      3\n17          Dicots   8715            22      3\n18           Fungi      0             0      1\n19       Chromista      0             0      1\n20        Protozoa      0             0      1\n21        Bacteria      0             0      1\n22           Algae      0             0      1",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>count</th>\n      <th>speciesCount</th>\n      <th>level</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ALL_SPECIES</td>\n      <td>8789</td>\n      <td>81</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Animals</td>\n      <td>68</td>\n      <td>55</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Mammals</td>\n      <td>6</td>\n      <td>5</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Birds</td>\n      <td>48</td>\n      <td>37</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Reptiles</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Amphibians</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Fishes</td>\n      <td>4</td>\n      <td>3</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Molluscs</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Arthropods</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Crustaceans</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Insects</td>\n      <td>0</td>\n      <td>0</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Plants</td>\n      <td>8721</td>\n      <td>26</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Bryophytes</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Gymnosperms</td>\n      <td>3</td>\n      <td>1</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>FernsAndAllies</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Angiosperms</td>\n      <td>8718</td>\n      <td>25</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Monocots</td>\n      <td>3</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>Dicots</td>\n      <td>8715</td>\n      <td>22</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>Fungi</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>Chromista</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>Protozoa</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>Bacteria</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Algae</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              name     count  speciesCount  level\n0      ALL_SPECIES  59901282        139228      0\n1          Animals  47977452         81821      1\n2          Mammals   2604795           599      2\n3            Birds  38536636          1934      2\n4         Reptiles    879198          1242      2\n5       Amphibians    721921           249      2\n6           Fishes   2043524          5292      2\n7         Molluscs    507830          9896      2\n8       Arthropods   2390775         52013      2\n9      Crustaceans    345302          7822      3\n10         Insects   1900310         37832      3\n11          Plants  11292812         42060      1\n12      Bryophytes         0             0      2\n13     Gymnosperms     66266           464      2\n14  FernsAndAllies    325691           878      2\n15     Angiosperms  10616921         36109      2\n16        Monocots   3392268          7399      3\n17          Dicots   7224653         29010      3\n18           Fungi    340603         14456      1\n19       Chromista    266788          1245      1\n20        Protozoa        42             9      1\n21        Bacteria      3411           484      1\n22           Algae    360836          2400      1",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>count</th>\n      <th>speciesCount</th>\n      <th>level</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>ALL_SPECIES</td>\n      <td>59901282</td>\n      <td>139228</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Animals</td>\n      <td>47977452</td>\n      <td>81821</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Mammals</td>\n      <td>2604795</td>\n      <td>599</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Birds</td>\n      <td>38536636</td>\n      <td>1934</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Reptiles</td>\n      <td>879198</td>\n      <td>1242</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Amphibians</td>\n      <td>721921</td>\n      <td>249</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Fishes</td>\n      <td>2043524</td>\n      <td>5292</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Molluscs</td>\n      <td>507830</td>\n      <td>9896</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Arthropods</td>\n      <td>2390775</td>\n      <td>52013</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Crustaceans</td>\n      <td>345302</td>\n      <td>7822</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>Insects</td>\n      <td>1900310</td>\n      <td>37832</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>Plants</td>\n      <td>11292812</td>\n      <td>42060</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>Bryophytes</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>Gymnosperms</td>\n      <td>66266</td>\n      <td>464</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>FernsAndAllies</td>\n      <td>325691</td>\n      <td>878</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Angiosperms</td>\n      <td>10616921</td>\n      <td>36109</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>Monocots</td>\n      <td>3392268</td>\n      <td>7399</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>17</th>\n      <td>Dicots</td>\n      <td>7224653</td>\n      <td>29010</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>Fungi</td>\n      <td>340603</td>\n      <td>14456</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>Chromista</td>\n      <td>266788</td>\n      <td>1245</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>Protozoa</td>\n      <td>42</td>\n      <td>9</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>Bacteria</td>\n      <td>3411</td>\n      <td>484</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>22</th>\n      <td>Algae</td>\n      <td>360836</td>\n      <td>2400</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
