Renamed current list files, removed old version

--- a/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
@@ -123,18 +123,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "outputs": [
     {
@@ -164,7 +152,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sensitivelist.to_csv(projectDir + sdataDir + 'ACT-sensitive-20230614.csv', encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'ACT-sensitive' + monthStr + '.csv', encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing ACT Sensitive List')"
    ],
    "metadata": {
