--- a/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
@@ -220,17 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'list_functions' has no attribute 'download_ala_species_list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_31904/141657997.py\u001B[0m in \u001B[0;36m<cell line: 5>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[0mfilename\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mstate\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m\"-\"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mproddr\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m\"-sensitive.csv\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mprodListUrl\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;34m\"https://lists.ala.org.au/ws/speciesListItems/\"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mproddr\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m\"?max=10000&includeKVP=true\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 5\u001B[1;33m \u001B[0mprodList\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mdownload_ala_species_list\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mprodListUrl\u001B[0m\u001B[1;33m)\u001B[0m  \u001B[1;31m# save the prod list to the historical lists directory\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      6\u001B[0m \u001B[0mprodList\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mlf\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mkvp_to_columns\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mprodList\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      7\u001B[0m \u001B[0mprodList\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mto_csv\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mprojectDir\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m\"historical-lists/sensitive/\"\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mfilename\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mencoding\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;34m\"UTF-8\"\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mindex\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;32mFalse\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: module 'list_functions' has no attribute 'download_ala_species_list'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "download_ala_list:  https://lists.ala.org.au/ws/speciesListItems/dr2627?max=10000&includeKVP=true\n",
+      "Index(['id', 'name', 'commonName', 'scientificName', 'lsid', 'dataResourceUid',\n",
+      "       'kvpValues'],\n",
+      "      dtype='object')\n",
+      "Finished downloading sensitive historical list\n"
      ]
     }
    ],
