Updated output list file naming

--- a/source-code/py-notebook/conservation/ACT-conservation.ipynb
+++ b/source-code/py-notebook/conservation/ACT-conservation.ipynb
@@ -311,9 +311,23 @@
     }
    ],
    "source": [
-    "consData.to_csv(projectDir + cdataDir + 'ACT-conservation-' + monthStr + '.csv',  encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr649'\n",
+    "# consData.to_csv(projectDir + cdataDir + 'ACT-' + dr + -conservation-' + monthStr + '.csv',  encoding=\"UTF-8\", index=False)\n",
+    "consData.to_csv(projectDir + cdataDir + 'ACT-' + dr + '-conservation.csv',  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing ACT conservation list\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
