--- a/source-code/py-notebook/conservation/EPBC-conservation.ipynb
+++ b/source-code/py-notebook/conservation/EPBC-conservation.ipynb
@@ -380,7 +380,8 @@
    "execution_count": 17,
    "outputs": [],
    "source": [
-    "epbcreport.to_csv(processedDataDir + \"EPBC-conservation-20230601.csv\",encoding=\"UTF-8\",index=False)"
+    "dr = 'dr656'\n",
+    "epbcreport.to_csv(processedDataDir + 'EPBC-' + dr + '-conservation.csv,encoding=\"UTF-8\",index=False)"
    ],
    "metadata": {
     "collapsed": false,
