--- a/source-code/py-notebook/conservation/NSW-conservation.ipynb
+++ b/source-code/py-notebook/conservation/NSW-conservation.ipynb
@@ -227,7 +227,8 @@
    "outputs": [],
    "source": [
     "print(\"Writing to CSV\")\n",
-    "conservationlist.to_csv(projectDir + \"current-lists/conservation-lists/NSW-conservationlist-20230601.csv\",encoding=\"UTF-8\",index=False)\n",
+    "dr = 'dr650'\n",
+    "conservationlist.to_csv(projectDir + 'current-lists/conservation-lists/NSW-' + dr + '-conservationlist.csv',encoding=\"UTF-8\",index=False)\n",
     "print('Finished writing NSW conservation list')"
    ],
    "metadata": {
