--- a/source-code/py-notebook/conservation/NT-conservation.ipynb
+++ b/source-code/py-notebook/conservation/NT-conservation.ipynb
@@ -357,7 +357,8 @@
     }
    ],
    "source": [
-    "result.to_csv(projectDir + cdataDir + 'NT-Conservation-20230712.csv',  encoding=\"UTF-8-sig\",index = False)\n",
+    "dr = 'dr651'\n",
+    "result.to_csv(projectDir + cdataDir + 'NT-' + dr + '-conservation.csv',  encoding=\"UTF-8-sig\",index = False)\n",
     "print(\"Finished writing NT conservation listt\")"
    ],
    "metadata": {
