--- a/source-code/py-notebook/conservation/QLD-conservation.ipynb
+++ b/source-code/py-notebook/conservation/QLD-conservation.ipynb
@@ -432,7 +432,8 @@
     }
    ],
    "source": [
-    "conservationlist.to_csv(processedDataDir + \"conservation-lists/QLD-conservation-20230712.csv\",encoding=\"UTF-8\",index=False)\n",
+    "dr = 'dr652'\n",
+    "conservationlist.to_csv(processedDataDir + 'conservation-lists/QLD-' + dr + '-conservation.csv',encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing QLD conservation list\")"
    ],
    "metadata": {
