--- a/source-code/py-notebook/conservation/SA-conservation.ipynb
+++ b/source-code/py-notebook/conservation/SA-conservation.ipynb
@@ -606,7 +606,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "conservationlist.to_csv(projectDir + cdataDir + \"SA-conservation-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr653'\n",
+    "conservationlist.to_csv(projectDir + cdataDir + 'SA-' + dr + '-conservation.csv',  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing SA conservation list\")"
    ],
    "metadata": {
