--- a/source-code/py-notebook/conservation/TAS-conservation.ipynb
+++ b/source-code/py-notebook/conservation/TAS-conservation.ipynb
@@ -325,7 +325,8 @@
    "outputs": [],
    "source": [
     "print('Writing to CSV')\n",
-    "conservationlist.to_csv(projectDir + cdataDir + \"TAS-conservation-20230601.csv\", encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr654'\n",
+    "conservationlist.to_csv(projectDir + cdataDir + 'TAS-' + dr + '-conservation.csv', encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing TAS conservation list')"
    ],
    "metadata": {
