--- a/source-code/py-notebook/conservation/VIC-conservation.ipynb
+++ b/source-code/py-notebook/conservation/VIC-conservation.ipynb
@@ -307,7 +307,8 @@
    "outputs": [],
    "source": [
     "#Write to CSV\n",
-    "conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation-20230601.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr655'\n",
+    "conservationList.to_csv(projectDir + cdataDir + 'VIC-' + dr + '-conservation.csv',  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing VIC conservation list\")"
    ],
    "metadata": {
