--- a/source-code/py-notebook/conservation/WA-conservation.ipynb
+++ b/source-code/py-notebook/conservation/WA-conservation.ipynb
@@ -421,7 +421,8 @@
    ],
    "source": [
     "#Write to CSV\n",
-    "data.to_csv(processedDataDir + \"WA-conservation-20230724.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr2201'\n",
+    "data.to_csv(processedDataDir + 'WA-' + dr + '-conservation.csv',  encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing WA conservation list\")"
    ],
    "metadata": {
