--- a/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/ACT-sensitive.ipynb
@@ -152,7 +152,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sensitivelist.to_csv(projectDir + sdataDir + 'ACT-sensitive' + monthStr + '.csv', encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr2627'\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'ACT-' + dr + '-sensitive.csv', encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing ACT Sensitive List')"
    ],
    "metadata": {
