--- a/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
@@ -170,7 +170,8 @@
     "new[['vernacularName']] = \"Glossy Black-cockatoo\"\n",
     "sensitivelist = pd.concat([sensitivelist,new])\n",
     "sensitivelist[sensitivelist['scientificName'].str.startswith('Calyptorhynchus lathami')]\n",
-    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-\" + dateStr + \".csv\",encoding=\"UTF-8\",index=False)"
+    "dr = 'dr487'\n",
+    "sensitivelist.to_csv(projectDir + 'current-lists/sensitive-lists/NSW-' + dr + '-sensitive-.csv',encoding=\"UTF-8\",index=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -247,7 +248,10 @@
     "If all ok, run the following to keep a copy of the list in prod before overwriting it"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
