--- a/source-code/py-notebook/sensitive/NT-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NT-sensitive.ipynb
@@ -158,8 +158,9 @@
    "outputs": [],
    "source": [
     "#Write to CSV\n",
+    "dr = 'dr492'\n",
     "# conservationList.to_csv(projectDir + cdataDir + \"VIC-conservation.csv\",index=False)\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"NT-sensitive-20230614.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'NT-' + dr + '-sensitive.csv',  encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing NT Sensitive list')"
    ],
    "metadata": {
