--- a/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/QLD-sensitive.ipynb
@@ -294,7 +294,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sensitivelist.to_csv(processedDataDir + \"sensitive-lists/QLD-sensitive-20230614.csv\",encoding=\"UTF-8\",index=False)\n",
+    "dr = 'dr493'\n",
+    "sensitivelist.to_csv(processedDataDir + 'sensitive-lists/QLD-' + dr + '-sensitive.csv',encoding=\"UTF-8\",index=False)\n",
     "print(\"Finished writing QLD Sensitive list\")"
    ],
    "metadata": {
