--- a/source-code/py-notebook/sensitive/SA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/SA-sensitive.ipynb
@@ -205,7 +205,8 @@
    "outputs": [],
    "source": [
     "# sasensitive.to_csv(\"~/IdeaProjects/authoritative-lists/current-lists/sensitive-lists/SA-sensitive.csv\",encoding=\"UTF-8\",index=False)\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"SA-sensitive.csv\", encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr884'\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'SA-' + dr + '-sensitive.csv', encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing SA Sensitive list\")"
    ],
    "metadata": {
