--- a/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/TAS-sensitive.ipynb
@@ -175,7 +175,8 @@
    "outputs": [],
    "source": [
     "print('Writing to CSV')\n",
-    "sensitivelist.to_csv(projectDir + sdataDir + \"TAS-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr491'\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'TAS-' + dr + '-sensitive.csv', encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing TAS Sensitive list\")"
    ],
    "metadata": {
