--- a/source-code/py-notebook/sensitive/VIC-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/VIC-sensitive.ipynb
@@ -171,7 +171,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sensitivelist.to_csv(projectDir + sdataDir + \"VIC-sensitive-20230614.csv\",  encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr490'\n",
+    "sensitivelist.to_csv(projectDir + sdataDir + 'VIC-' + dr + '-sensitive.csv',  encoding=\"UTF-8\", index=False)\n",
     "print('Finished writing VIC Sensitive list')"
    ],
    "metadata": {
