--- a/source-code/py-notebook/sensitive/WA-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/WA-sensitive.ipynb
@@ -620,8 +620,8 @@
     }
    ],
    "source": [
-    "\n",
-    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/WA-sensitive-20230614.csv\", encoding=\"UTF-8\", index=False)\n",
+    "dr = 'dr467'\n",
+    "sensitivelist.to_csv(projectDir + 'current-lists/sensitive-lists/WA-' + dr + '-sensitive.csv', encoding=\"UTF-8\", index=False)\n",
     "print(\"Finished writing WA Sensitive list\")"
    ],
    "metadata": {
