--- a/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
@@ -117,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "               scientificName        family          genus  \\\n5    Callocephalon fimbriatum    Cacatuidae  Callocephalon   \n51        Anthochaera phrygia  Meliphagidae    Anthochaera   \n159             Ninox strenua     Strigidae          Ninox   \n326          Tyto tenebricosa     Tytonidae           Tyto   \n356           Ninox connivens     Strigidae          Ninox   \n\n         vernacularName generalisation    category  \n5    Gang-gang Cockatoo            1km  Category 3  \n51    Regent Honeyeater           10km  Category 2  \n159        Powerful Owl            1km  Category 3  \n326           Sooty Owl            1km  Category 3  \n356         Barking Owl            1km  Category 3  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>family</th>\n      <th>genus</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>Callocephalon fimbriatum</td>\n      <td>Cacatuidae</td>\n      <td>Callocephalon</td>\n      <td>Gang-gang Cockatoo</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>Anthochaera phrygia</td>\n      <td>Meliphagidae</td>\n      <td>Anthochaera</td>\n      <td>Regent Honeyeater</td>\n      <td>10km</td>\n      <td>Category 2</td>\n    </tr>\n    <tr>\n      <th>159</th>\n      <td>Ninox strenua</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Powerful Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>Tyto tenebricosa</td>\n      <td>Tytonidae</td>\n      <td>Tyto</td>\n      <td>Sooty Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td>Ninox connivens</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Barking Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,6 @@
     "sensitivelist = sensitivelist.rename(columns={'sensitivityClass': 'category'})\n",
     "\n",
     "# 3\n",
-    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-\" + dateStr + \".csv\",encoding=\"UTF-8\",index=False)\n",
     "sensitivelist.head(5)"
    ],
    "metadata": {
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "## 22/08/2023\n",
@@ -170,14 +169,20 @@
     "new[['vernacularName']] = \"Glossy Black-cockatoo\"\n",
     "sensitivelist = pd.concat([sensitivelist,new])\n",
     "sensitivelist[sensitivelist['scientificName'].str.startswith('Calyptorhynchus lathami')]\n",
-    "dr = 'dr487'\n",
-    "sensitivelist.to_csv(projectDir + 'current-lists/sensitive-lists/NSW-' + dr + '-sensitive-.csv',encoding=\"UTF-8\",index=False)"
+    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-dr487-sensitive.csv\",encoding=\"UTF-8\",index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -198,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -217,10 +222,10 @@
     },
     {
      "data": {
-      "text/plain": "                                       name  \\\n148         Calyptorhynchus lathami lathami   \n186   Leionema lamprophyllum subsp. fractum   \n199                   Danhatchia copelandii   \n139  Leionema lamprophyllum subsp. obovatum   \n140                     Caladenia porphyrea   \n\n                         scientificName_old  \\\n148                                     NaN   \n186                                     NaN   \n199                                     NaN   \n139  Leionema lamprophyllum subsp. obovatum   \n140                   Caladenia quadrifaria   \n\n                                    scientificName_new  commonName_old  \\\n148  Calyptorhynchus (Calyptorhynchus) lathami lathami             NaN   \n186              Leionema lamprophyllum subsp. fractum             NaN   \n199                              Danhatchia copelandii             NaN   \n139                                                NaN  Shiny Leionema   \n140                                                NaN            None   \n\n            commonName_new listUpdate  \n148  Glossy Black-cockatoo      added  \n186                   None      added  \n199                   None      added  \n139                    NaN    removed  \n140                    NaN    removed  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>scientificName_old</th>\n      <th>scientificName_new</th>\n      <th>commonName_old</th>\n      <th>commonName_new</th>\n      <th>listUpdate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>148</th>\n      <td>Calyptorhynchus lathami lathami</td>\n      <td>NaN</td>\n      <td>Calyptorhynchus (Calyptorhynchus) lathami lathami</td>\n      <td>NaN</td>\n      <td>Glossy Black-cockatoo</td>\n      <td>added</td>\n    </tr>\n    <tr>\n      <th>186</th>\n      <td>Leionema lamprophyllum subsp. fractum</td>\n      <td>NaN</td>\n      <td>Leionema lamprophyllum subsp. fractum</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n    <tr>\n      <th>199</th>\n      <td>Danhatchia copelandii</td>\n      <td>NaN</td>\n      <td>Danhatchia copelandii</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n    <tr>\n      <th>139</th>\n      <td>Leionema lamprophyllum subsp. obovatum</td>\n      <td>Leionema lamprophyllum subsp. obovatum</td>\n      <td>NaN</td>\n      <td>Shiny Leionema</td>\n      <td>NaN</td>\n      <td>removed</td>\n    </tr>\n    <tr>\n      <th>140</th>\n      <td>Caladenia porphyrea</td>\n      <td>Caladenia quadrifaria</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>NaN</td>\n      <td>removed</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                   name scientificName_old  scientificName_new commonName_old  \\\n138  Caladenia amnicola                NaN  Caladenia amnicola            NaN   \n\n    commonName_new listUpdate  \n138           None      added  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>scientificName_old</th>\n      <th>scientificName_new</th>\n      <th>commonName_old</th>\n      <th>commonName_new</th>\n      <th>listUpdate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>138</th>\n      <td>Caladenia amnicola</td>\n      <td>NaN</td>\n      <td>Caladenia amnicola</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,15 +253,12 @@
     "If all ok, run the following to keep a copy of the list in prod before overwriting it"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
