Updated NSW list and monitoring files

--- a/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
+++ b/source-code/py-notebook/sensitive/NSW-sensitive.ipynb
@@ -61,10 +61,11 @@
     "import datetime\n",
     "import ssl\n",
     "\n",
-    "#projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
-    "projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
+    "projectDir = \"/Users/oco115/PycharmProjects/authoritative-lists/\"\n",
+    "# projectDir = \"/Users/new330/IdeaProjects/authoritative-lists/\"\n",
     "statusDir = projectDir + \"source-data/status-codes/\"\n",
     "dateStr = datetime.datetime.now().strftime('%Y%m%d')\n",
+    "dr = 'dr487'\n",
     "sys.path.append(os.path.abspath(projectDir + \"source-code/includes\"))\n",
     "import list_functions as lf"
    ],
@@ -117,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "               scientificName        family          genus  \\\n5    Callocephalon fimbriatum    Cacatuidae  Callocephalon   \n51        Anthochaera phrygia  Meliphagidae    Anthochaera   \n159             Ninox strenua     Strigidae          Ninox   \n326          Tyto tenebricosa     Tytonidae           Tyto   \n356           Ninox connivens     Strigidae          Ninox   \n\n         vernacularName generalisation    category  \n5    Gang-gang Cockatoo            1km  Category 3  \n51    Regent Honeyeater           10km  Category 2  \n159        Powerful Owl            1km  Category 3  \n326           Sooty Owl            1km  Category 3  \n356         Barking Owl            1km  Category 3  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>scientificName</th>\n      <th>family</th>\n      <th>genus</th>\n      <th>vernacularName</th>\n      <th>generalisation</th>\n      <th>category</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>Callocephalon fimbriatum</td>\n      <td>Cacatuidae</td>\n      <td>Callocephalon</td>\n      <td>Gang-gang Cockatoo</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>51</th>\n      <td>Anthochaera phrygia</td>\n      <td>Meliphagidae</td>\n      <td>Anthochaera</td>\n      <td>Regent Honeyeater</td>\n      <td>10km</td>\n      <td>Category 2</td>\n    </tr>\n    <tr>\n      <th>159</th>\n      <td>Ninox strenua</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Powerful Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>326</th>\n      <td>Tyto tenebricosa</td>\n      <td>Tytonidae</td>\n      <td>Tyto</td>\n      <td>Sooty Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n    <tr>\n      <th>356</th>\n      <td>Ninox connivens</td>\n      <td>Strigidae</td>\n      <td>Ninox</td>\n      <td>Barking Owl</td>\n      <td>1km</td>\n      <td>Category 3</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +147,7 @@
     "sensitivelist = sensitivelist.rename(columns={'sensitivityClass': 'category'})\n",
     "\n",
     "# 3\n",
+    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-sensitive-\" + dr + \".csv\",encoding=\"UTF-8\",index=False)\n",
     "sensitivelist.head(5)"
    ],
    "metadata": {
@@ -157,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "## 22/08/2023\n",
@@ -169,20 +171,13 @@
     "new[['vernacularName']] = \"Glossy Black-cockatoo\"\n",
     "sensitivelist = pd.concat([sensitivelist,new])\n",
     "sensitivelist[sensitivelist['scientificName'].str.startswith('Calyptorhynchus lathami')]\n",
-    "sensitivelist.to_csv(projectDir + \"current-lists/sensitive-lists/NSW-dr487-sensitive.csv\",encoding=\"UTF-8\",index=False)"
+    "sensitivelist.to_csv(projectDir + 'current-lists/sensitive-lists/NSW-' + dr + '-sensitive-.csv',encoding=\"UTF-8\",index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [],
-   "metadata": {
-    "collapsed": false
    }
   },
   {
@@ -203,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -222,10 +217,10 @@
     },
     {
      "data": {
-      "text/plain": "                   name scientificName_old  scientificName_new commonName_old  \\\n138  Caladenia amnicola                NaN  Caladenia amnicola            NaN   \n\n    commonName_new listUpdate  \n138           None      added  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>scientificName_old</th>\n      <th>scientificName_new</th>\n      <th>commonName_old</th>\n      <th>commonName_new</th>\n      <th>listUpdate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>138</th>\n      <td>Caladenia amnicola</td>\n      <td>NaN</td>\n      <td>Caladenia amnicola</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                   name scientificName_old  scientificName_new commonName_old  \\\n200  Lobelia claviflora                NaN  Lobelia claviflora            NaN   \n\n    commonName_new listUpdate  \n200           None      added  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>scientificName_old</th>\n      <th>scientificName_new</th>\n      <th>commonName_old</th>\n      <th>commonName_new</th>\n      <th>listUpdate</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>200</th>\n      <td>Lobelia claviflora</td>\n      <td>NaN</td>\n      <td>Lobelia claviflora</td>\n      <td>NaN</td>\n      <td>None</td>\n      <td>added</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,12 +248,15 @@
     "If all ok, run the following to keep a copy of the list in prod before overwriting it"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
